--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vanilla",
+  "name": "funklet selecta",
   "version": "1.0.0",
-  "description": "JavaScript example starter project",
+  "description": "select the funklet you want!",
   "main": "index.html",
   "scripts": {
     "start": "parcel index.html --open",
@@ -17,8 +17,8 @@
   "resolutions": {
     "@babel/preset-env": "7.13.8"
   },
-  "keywords": ["javascript", "starter"],
+  "keywords": ["javascript", "funklet"],
   "staticFiles": {
-    "staticPath": ["data", "css"]
+    "staticPath": "beats.json"
   }
 }
